# tetraWild-Kokkos

./: .gitignore  CMakeLists.txt  Makefile  README.md  output.msh__sf.stl  output.msh__tracked_surface.stl  output.txt  run_installlibs_cmake.sh
include/floattetwild/: TriangleInsertion.h
include/nlohmann/detail/: macro_scope.hpp
src/: Makefile  cube10.stl  main.cpp  tetraWildFunctions.cpp
